[package]
name = "statime-linux"
readme = "README.md"
description = "Linux daemon for the Statime Precision Time Protocol library"
edition = "2021"

[dependencies]
statime = "*"

arrayvec = "*"
clap = { version = "4.4.7", features = ["derive"] }
tracing = "0.1.21"
tracing-log = ">=0.1.0, <0.3.0"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["std", "fmt", "ansi"] }
hex = "*"
libc = "*"
log = { version="*", default-features = true }
pin-project-lite = "*"
toml = "*"
tokio = { version="*", features = ["net", "rt-multi-thread", "time", "macros", "sync", "io-util"] }
rand = { version="*", default-features = false, features = ["std", "std_rng"] }
serde = "*"
serde_json = "*"

clock-steering = "*"
timestamped-socket = "0.2.4"
