[package]
name = "statime-linux"
edition = "2021"

[dependencies]
statime = "0.2.2"
libc = "0.2.169"
log = { version="0.4.22", default-features = true }
pin-project-lite = "0.2.16"
tokio = { version="1.41.1", features = ["net", "rt-multi-thread", "time", "macros", "sync", "io-util"] }
rand = { version="0.8.5", default-features = false, features = ["std", "std_rng"] }
clock-steering = "0.2.1"
timestamped-socket = "0.2.4"
